<resources>
    <string name="app_name">TaskManager</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="waiting_approval">Waiting for Approve</string>
    <string name="on_progress">On Progress</string>
    <string name="completed">Completed</string>
    <string name="not_completed">Not completed</string>
    <string name="need_discuss">Need discuss</string>
    <string name="approve">Approve</string>
    <string name="mark_as_completed">Mark as completed</string>
    <string name="status">Status:</string>
    <string name="level">Level</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="id">ID</string>
    <string name="add_user">Add User</string>
    <string name="task_title">Task Title</string>
    <string name="task_detail">Task Detail</string>
    <string name="task_deadline">Task Deadline</string>
    <string name="assign_to">Assign to</string>
    <string name="create_task">Create Task</string>
    <string name="add_task">Add Task</string>
    <string name="logout">Logout</string>
</resources>
