<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/task_title_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/title_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task_title" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/task_detail_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_title_input_layout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/detail_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task_detail" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/assign_to_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/assign_to"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/task_detail_input_layout" />

    <Spinner
        android:id="@+id/assign_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/assign_to_tv" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/task_deadline_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/assign_spinner">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/task_deadline_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task_deadline" />
    </android.support.design.widget.TextInputLayout>


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/create_task"
        app:layout_constraintLeft_toLeftOf="@id/level_spinner"
        app:layout_constraintRight_toRightOf="@id/level_spinner"
        app:layout_constraintTop_toBottomOf="@+id/task_deadline_input_layout" />

</android.support.constraint.ConstraintLayout>